# SOVRA

./: .gitignore  Cargo.toml  README.md  RUN.md  deny.toml  rustfmt.toml
.github/workflows/: build_check.yml  integration_sepolia.yml  memory_leak.yml
config/: sepolia.toml
crates/sovra-api/: Cargo.toml
crates/sovra-api/src/: api.rs  config.rs  errors.rs  main.rs  run.rs
crates/sovra-api/tests/: sepolia_prepare.rs
crates/sovra-eth/: Cargo.toml
crates/sovra-eth/src/: finalize.rs  lib.rs  prepare.rs  tests.rs  types.rs
crates/sovra-observability/: Cargo.toml
crates/sovra-observability/src/: lib.rs
docs/: ARCHITECTURE.md
