[package]
name = "sovra-eth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
thiserror = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
url = { workspace = true }
